WP-7858 Fixed another corner case of name wrapping issue

--- a/sass/conditionals/insights/related-to-idea-story.sass
+++ b/sass/conditionals/insights/related-to-idea-story.sass
@@ -284,3 +284,10 @@
   
 .field-name-field-related-faculty .node-faculty span.person-position 
   width: auto !important
+
+.faculty-author-wrapper .node-faculty .person-position, .faculty-author-wrapper .node-faculty .person-name
+  width: 160px
+  float: left
+
+.faculty-author-wrapper .node-faculty span.person-position
+  width: auto !important
